# SDL_Learn

./: .gitignore
Chapter01/: .vimspector.json  CMakeLists.txt
Chapter01/debug/: CMakeCache.txt  Makefile  SDL_DEMO  cmake_install.cmake
Chapter02/: .vimspector.json  CMakeLists.txt
Chapter02/sources/: .Actor.cpp.swp  .Actor.h.swp  .Game.cpp.swp  .Game.h.swp  Actor.cpp  Actor.h  Component.cpp  Component.h  Game.cpp  Game.h  SpriteComponent.cpp
Chapter02/src/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  BGSpriteComponent.cpp  Game.cpp  Game.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h
Chapter03/: .vimspector.json  CMakeLists.txt  CMakePresets.json
Chapter03/src/: Actor.cpp  Actor.h  AnimSpriteComponent.h  Asteroid.cpp  Asteroid.h  BGSpriteComponent.cpp  BGSpriteComponent.h  Component.cpp  Component.h  Game.cpp  Game.h  InputComponent.cpp  InputComponent.h  Main.cpp  MoveComponent.cpp  MoveComponent.h  Ship.cpp  Ship.h  SpriteComponent.cpp  TextComponent.cpp  TextComponent.h
vcpkg_demo/: CMakeLists.txt  CMakePresets.json  vcpkg.json
vcpkg_demo/src/: Game.cpp  Game.h
